fix wrap

--- a/src/components/Interface/AppCard/styles.scss
+++ b/src/components/Interface/AppCard/styles.scss
@@ -96,11 +96,6 @@
   color: $color-black;
   font-size: 20px;
   line-height: 25px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
 
   @media (max-width: $width-small-desktop) {
     font-size: 16px;
